--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -11,7 +11,7 @@
     <header>
       Katie Macaulay
     </header>
-    <h1>Beginner Developer, Performer</h1>
+    <h1>Web Developer, Performer</h1>
     <div>
         <aside>
           <button type="button" name="button"></button>
