firs bio;font change

--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Katie Macaulay Bio</title>
-    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -11,7 +11,7 @@
     <header>
       Katie Macaulay
     </header>
-    <h1>Web Developer, Performer</h1>
+    <h1>Web Developer, Creative</h1>
     <div>
         <aside>
           <button type="button" name="button"></button>
